force-app/main/default/objects/Daily_Summary_Report__c/Daily_Summary_Report__c.object-meta.xml
<CustomObject>
    <label>Daily Site Job Summary</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Daily Site Job Summary No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Site Job Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>