force-app/main/default/objects/Daily_Summary_Report__c/fields/Company_Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Company_Manager_Comments__c</fullName>
    <label>Company Manager Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>