force-app/main/default/objects/Daily_Summary_Report__c/fields/Company_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Manager_Email__c</fullName>
    <label>Company Manager Email</label>
    <type>Email</type>
</CustomField>