force-app/main/default/objects/Daily_Summary_Report__c/fields/Company_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Manager_Name__c</fullName>
    <label>Company Manager Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>