force-app/main/default/objects/Daily_Summary_Report__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Daily_Summary_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>