force-app/main/default/objects/Daily_Summary_Report__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <label>Date Approved</label>
    <type>DateTime</type>
</CustomField>