force-app/main/default/objects/Daily_Summary_Report__c/fields/Days_Aging__c.field-meta.xml
<CustomField>
    <fullName>Days_Aging__c</fullName>
    <formula>TODAY()-Summary_Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>