force-app/main/default/objects/Daily_Summary_Report__c/fields/DSJS_Approver__c.field-meta.xml
<CustomField>
    <fullName>DSJS_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DSJS Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Site_Job_Summaries2</relationshipName>
    <type>Lookup</type>
</CustomField>