force-app/main/default/objects/Daily_Summary_Report__c/fields/DSJS_For_My_Approval__c.field-meta.xml
<CustomField>
    <fullName>DSJS_For_My_Approval__c</fullName>
    <formula>$User.Id =  Ops_Supervisor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSJS For My Approval</label>
    <type>Checkbox</type>
</CustomField>