force-app/main/default/objects/Daily_Summary_Report__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipName>Daily_Summary_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>