force-app/main/default/objects/Daily_Summary_Report__c/fields/LTI_Free_Days_Camp__c.field-meta.xml
<CustomField>
    <fullName>LTI_Free_Days_Camp__c</fullName>
    <label>LTI Free Days(Camp)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>