force-app/main/default/objects/Daily_Summary_Report__c/fields/LTI_Free_Days_Rig__c.field-meta.xml
<CustomField>
    <fullName>LTI_Free_Days_Rig__c</fullName>
    <label>LTI Free Days(Rig)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>