force-app/main/default/objects/Daily_Summary_Report__c/fields/OCR_Approval_Link__c.field-meta.xml
<CustomField>
    <fullName>OCR_Approval_Link__c</fullName>
    <formula>HYPERLINK($Label.PublicSiteDomain + &apos;/DailySiteJobSummary_VF?id=&apos; +  Id, &apos;Click to view&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OCR Approval Link</label>
    <type>Text</type>
</CustomField>