force-app/main/default/objects/Daily_Summary_Report__c/fields/Ops_Manager_Status_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Ops_Manager_Status_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Manager Status Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Site_Job_Summaries1</relationshipName>
    <type>Lookup</type>
</CustomField>