force-app/main/default/objects/Daily_Summary_Report__c/fields/Ops_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Ops_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Site_Job_Summaries3</relationshipName>
    <type>Lookup</type>
</CustomField>