force-app/main/default/objects/Daily_Summary_Report__c/fields/OpsSuperVisorApprovalNotes__c.field-meta.xml
<CustomField>
    <fullName>OpsSuperVisorApprovalNotes__c</fullName>
    <label>Ops Supervisor Approval Notes</label>
    <type>TextArea</type>
</CustomField>