force-app/main/default/objects/Daily_Summary_Report__c/fields/Previous_Site__c.field-meta.xml
<CustomField>
    <fullName>Previous_Site__c</fullName>
    <label>Previous Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>