force-app/main/default/objects/Daily_Summary_Report__c/fields/Rig_Manager__c.field-meta.xml
<CustomField>
    <fullName>Rig_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rig Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Job_Summaries_Rig_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>