force-app/main/default/objects/Daily_Summary_Report__c/fields/Rig_Manager_Status_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Rig_Manager_Status_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rig Manager Status Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Site_Job_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>