force-app/main/default/objects/Daily_Summary_Report__c/fields/Summary_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Summary_Report_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Summary Report Date</label>
    <type>Date</type>
</CustomField>