force-app/main/default/objects/Daily_Summary_Report__c/fields/Transport_Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Transport_Daily_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Daily Report</label>
    <referenceTo>Transport_Daily_Report__c</referenceTo>
    <relationshipLabel>Daily Site Job Summaries</relationshipLabel>
    <relationshipName>Daily_Site_Job_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>