force-app/main/default/objects/Daily_Summary_Report__c/fields/Transport_Only__c.field-meta.xml
<CustomField>
    <fullName>Transport_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transport Only</label>
    <type>Checkbox</type>
</CustomField>