force-app/main/default/objects/Daily_Summary_Report__c/fields/Units_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Units_Assigned__c</fullName>
    <description>Units Assigned to Contract</description>
    <formula>Contract__r.Units_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Units Assigned to Contract</inlineHelpText>
    <label>Units Assigned</label>
    <type>Text</type>
</CustomField>