force-app/main/default/objects/Daily_Summary_Report__c/fields/WD_Invoice_number__c.field-meta.xml
<CustomField>
    <fullName>WD_Invoice_number__c</fullName>
    <description>Invoice number in external corresponding external accounting system</description>
    <label>WD Invoice #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>