force-app/main/default/objects/Daily_Summary_Report__c/fields/WD_Notes__c.field-meta.xml
<CustomField>
    <fullName>WD_Notes__c</fullName>
    <inlineHelpText>For BOO and AR Team Notes</inlineHelpText>
    <label>WD Notes</label>
    <type>TextArea</type>
</CustomField>