force-app/main/default/objects/Daily_Summary_Report__c/validationRules/Cant_Change_to_Approved_if_Not_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Change_to_Approved_if_Not_Submitted</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
ISPICKVAL( Status__c , &quot;Approved&quot;)  &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(Status__c ),&quot;Submitted&quot;)),
TRUE,
FALSE
)</errorConditionFormula>
    <errorMessage>A Daily Site Job Summary can be Approved only if it has been Submitted</errorMessage>
</ValidationRule>