force-app/main/default/objects/Daily_Summary_Report__c/validationRules/Cant_Create_Daily_SumReport_ContractExp.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Create_Daily_SumReport_ContractExp</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
NOT( Contract__r.Contract_Active__c ) &amp;&amp; ISNEW(), 
TRUE, 
FALSE 
)</errorConditionFormula>
    <errorMessage>Cannot Create a Daily Site Job Summary Report for an Expired Contract</errorMessage>
</ValidationRule>