force-app/main/default/objects/Daily_Summary_Report__c/listViews/All_Finance_Inv_Approved.listView-meta.xml
<ListView>
    <fullName>All_Finance_Inv_Approved</fullName>
    <columns>Contract__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Ops_Supervisor__c</columns>
    <columns>NAME</columns>
    <columns>Summary_Report_Date__c</columns>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <columns>WD_Notes__c</columns>
    <columns>WD_Invoice_number__c</columns>
    <columns>Date_Approved__c</columns>
    <columns>Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Invoiced - Approved</value>
    </filters>
    <label>All Finance | Inv - Approved</label>
</ListView>