force-app/main/default/objects/Daily_Summary_Report__c/listViews/Camp_10_Santos_SA_611.listView-meta.xml
<ListView>
    <fullName>Camp_10_Santos_SA_611</fullName>
    <columns>Contract__c</columns>
    <columns>NAME</columns>
    <columns>Summary_Report_Date__c</columns>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <columns>WD_Invoice_number__c</columns>
    <columns>WD_Notes__c</columns>
    <columns>LTI_Free_Days_Camp__c</columns>
    <columns>Date_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>611</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Invoiced - Paid</value>
    </filters>
    <label>Camp 10 - Santos SA (611)</label>
    <sharedTo>
        <group>Camp_10</group>
        <group>Camp_Supervisor</group>
        <group>Finance</group>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>Safety</group>
    </sharedTo>
</ListView>