force-app/main/default/objects/Daily_Summary_Report__c/listViews/Checkthislist.listView-meta.xml
<ListView>
    <fullName>Checkthislist</fullName>
    <columns>Contract__c</columns>
    <columns>Units_Assigned__c</columns>
    <columns>Summary_Report_Date__c</columns>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>WD_Notes__c</columns>
    <columns>OCR_Approval_Link__c</columns>
    <columns>Ops_Supervisor__c</columns>
    <columns>Status__c</columns>
    <columns>Company_Manager_Comments__c</columns>
    <columns>Site_Status__c</columns>
    <columns>Days_Aging__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Submitted,Pending,Rejected,Ops Mgr - Approved</value>
    </filters>
    <label>Check this List - BOOs/Ops</label>
    <sharedTo>
        <group>BOO</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>