force-app/main/default/objects/Daily_Summary_Report__c/listViews/Rig_10_Camp_3_Beach_Energy_591.listView-meta.xml
<ListView>
    <fullName>Rig_10_Camp_3_Beach_Energy_591</fullName>
    <columns>Contract__c</columns>
    <columns>NAME</columns>
    <columns>Summary_Report_Date__c</columns>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <columns>WD_Notes__c</columns>
    <columns>Company_Manager_Comments__c</columns>
    <columns>WD_Invoice_number__c</columns>
    <columns>Date_Approved__c</columns>
    <columns>OCR_Approval_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>591</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Invoiced - Paid</value>
    </filters>
    <label>Rig 10/Camp 3 - Beach Energy (591)</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>OPs_super</group>
        <group>Rigs_10</group>
        <group>Safety</group>
    </sharedTo>
</ListView>