force-app/main/default/objects/Daily_Summary_Report__c/listViews/Rig_20_Santos_GLNG_558.listView-meta.xml
<ListView>
    <fullName>Rig_20_Santos_GLNG_558</fullName>
    <columns>Summary_Report_Date__c</columns>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Site_Status__c</columns>
    <columns>WD_Notes__c</columns>
    <columns>Status__c</columns>
    <columns>Days_Aging__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>558</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Invoiced - Paid</value>
    </filters>
    <label>Rig 20 - Santos GLNG (558)</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>OPs_super</group>
        <group>Rig_20</group>
        <group>Safety</group>
    </sharedTo>
</ListView>