force-app/main/default/objects/Daily_Summary_Report__c/listViews/Rig_26_Camp_11_Shell_744.listView-meta.xml
<ListView>
    <fullName>Rig_26_Camp_11_Shell_744</fullName>
    <columns>Contract__c</columns>
    <columns>NAME</columns>
    <columns>Summary_Report_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Site__c</columns>
    <columns>WD_Notes__c</columns>
    <columns>WD_Invoice_number__c</columns>
    <columns>Date_Approved__c</columns>
    <columns>Company_Manager_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>744</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Invoiced - Paid</value>
    </filters>
    <label>Rig 26/Camp 11 - Shell (744)</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>OPs_super</group>
        <group>Rig_26</group>
        <group>Safety</group>
    </sharedTo>
</ListView>